# mobile

./: .gitignore
android/: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle  local.properties
android/app/schemas/com.boycott.app.data.local.AppDatabase/: 1.json
android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.bak
android/app/src/main/assets/models/: metadata.yaml
android/app/src/main/cpp/: CMakeLists.txt  yolo_ncnn.cpp
android/app/src/main/cpp/include/ncnn/: platform.h
android/app/src/main/java/com/boycott/app/: BoycottApplication.kt  MainActivity.kt  SplashActivity.kt
android/app/src/main/res/drawable/: ic_error_network.xml  ic_error_server.xml  ic_error_timeout.xml  ic_error_unknown.xml  ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-ar/: strings.xml
android/app/src/main/res/values-bn/: strings.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-el/: strings.xml
android/app/src/main/res/values-en/: strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/values-fa/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-he/: strings.xml
android/app/src/main/res/values-hi/: strings.xml
android/app/src/main/res/values-in/: strings.xml
android/app/src/main/res/values-it/: strings.xml
android/app/src/main/res/values-ja/: strings.xml
android/app/src/main/res/values-ko/: strings.xml
android/app/src/main/res/values-ms/: strings.xml
android/app/src/main/res/values-nl/: strings.xml
android/app/src/main/res/values-pt/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
android/app/src/main/res/values-th/: strings.xml
android/app/src/main/res/values-tr/: strings.xml
android/app/src/main/res/values-ur/: strings.xml
android/app/src/main/res/values-vi/: strings.xml
android/app/src/main/res/values-zh/: strings.xml
ios/: .gitignore
ios/boycott/: ._boycott.xcodeproj  Package.swift  boycottApp.swift
ios/boycott/Extensions/: NotificationExtensions.swift
ios/boycott/boycott/: ._ContentView.swift  ._Item.swift  ._boycottApp.swift  ContentView.swift  Info.plist  Item.swift  boycottApp.swift
ios/boycott/boycott.xcodeproj/: project.pbxproj  project.pbxproj.backup
ios/boycott/boycott.xcodeproj/project.xcworkspace/xcuserdata/siqi.xcuserdatad/: UserInterfaceState.xcuserstate
ios/boycott/boycott.xcodeproj/xcuserdata/siqi.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/boycott/boycott/Assets.xcassets/Icons/Status/avoid-overlay.imageset/: Contents.json
ios/boycott/boycott/Assets.xcassets/LaunchImages/launch-background.imageset/: Contents.json
ios/boycott/boycott/Config/: AppConfig.swift  LanguageConfig.swift
ios/boycott/boycott/CoreData/SearchHistory.xcdatamodeld/SearchHistory.xcdatamodel/: contents
ios/boycott/boycott/Extensions/: Notification.swift  NotificationExtensions.swift
ios/boycott/boycott/Managers/: SearchHistoryManager.swift
ios/boycott/boycott/Models/: Article.swift  Brand.swift  HotSearchResponse.swift  Language.swift  PaginatedResponse.swift  ScanResult.swift
ios/boycott/boycott/Resources/: Localizable.strings
ios/boycott/boycott/Resources/ar.lproj/: Localizable.strings
ios/boycott/boycott/Resources/bn.lproj/: Localizable.strings
ios/boycott/boycott/Resources/de.lproj/: Localizable.strings
ios/boycott/boycott/Resources/en.lproj/: Localizable.strings
ios/boycott/boycott/Resources/es.lproj/: Localizable.strings
ios/boycott/boycott/Resources/fa.lproj/: Localizable.strings
ios/boycott/boycott/Resources/fr.lproj/: Localizable.strings
ios/boycott/boycott/Resources/hi.lproj/: Localizable.strings
ios/boycott/boycott/Resources/id.lproj/: Localizable.strings
ios/boycott/boycott/Resources/it.lproj/: Localizable.strings
ios/boycott/boycott/Resources/ja.lproj/: Localizable.strings
ios/boycott/boycott/Resources/ko.lproj/: Localizable.strings
ios/boycott/boycott/Resources/ms.lproj/: Localizable.strings
ios/boycott/boycott/Resources/nl.lproj/: Localizable.strings
ios/boycott/boycott/Resources/pt.lproj/: Localizable.strings
ios/boycott/boycott/Resources/ru.lproj/: Localizable.strings
ios/boycott/boycott/Resources/th.lproj/: Localizable.strings
ios/boycott/boycott/Resources/tr.lproj/: Localizable.strings
ios/boycott/boycott/Resources/ur.lproj/: Localizable.strings
ios/boycott/boycott/Resources/vi.lproj/: Localizable.strings
ios/boycott/boycott/Resources/zh-Hans.lproj/: Localizable.strings
ios/boycott/boycott/Services/: APIService.swift  BrandService.swift  CacheService.swift  LanguageManager.swift  NetworkManager.swift  NetworkMonitor.swift
ios/boycott/boycott/Utils/: LocalizationUtils.swift
ios/boycott/boycott/ViewModels/: BrandListViewModel.swift  HomeBrandListViewModel.swift  HomeViewModel.swift  ScannerViewModel.swift  SearchHistoryViewModel.swift  SearchViewModel.swift
ios/boycott/boycott/Views/: ArticleDetailView.swift  ContentView.swift  HomeView.swift  MainTabView.swift  MarkdownView.swift  ScanView.swift  SettingsView.swift
ios/boycott/boycott/Views/Article/: ArticleCarouselView.swift  ArticleDetailView.swift  ArticleListView.swift
ios/boycott/boycott/Views/Brand/: BrandGridView.swift
ios/boycott/boycott/Views/BrandList/: BrandListView.swift
ios/boycott/boycott/Views/Components/: CameraPreview.swift  CustomTabBar.swift  DonationOptionsView.swift  ErrorView.swift  FeedbackFormView.swift  ImagePicker.swift  LanguagePickerView.swift  LoadingView.swift  PrivacyPolicyView.swift  SettingRow.swift  TermsOfServiceView.swift  UserAgreementView.swift
ios/boycott/boycott/Views/Home/: HomeView.swift
ios/boycott/boycott/Views/Launch/: LaunchScreenView.swift
ios/boycott/boycott/Views/Scan/: ScanView.swift
ios/boycott/boycott/Views/Search/: SearchHistoryView.swift
ios/boycott/boycottTests/: boycottTests.swift
ios/boycott/boycottUITests/: boycottUITests.swift  boycottUITestsLaunchTests.swift
(+100 files in other folders)
